[#34] fix overlap content in tables with extra class option

--- a/sphinx_simplepdf/themes/simplepdf_theme/static/styles/sources/_tables.scss
+++ b/sphinx_simplepdf/themes/simplepdf_theme/static/styles/sources/_tables.scss
@@ -2,6 +2,13 @@ table.break {
     page-break-before: always;
 }
 
+table.table-wrap {
+    table-layout: fixed;
+    td, th {
+        overflow-wrap: break-word;
+    }
+}
+
 table.docutils {
     width: 100%;
     max-width: 100%;
